# logreport

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
logreport/: cli.py  domain.py  exceptions.py  io_.py  utils.py
logreport/reports/: __init__.py  average.py
tests/: test_average.py  test_cli.py  test_io.py  test_utils.py
