[project]
name = 'logreport'
version = "0.1.0"
description = "CLI tool for generating reports from JSON log files"
requires-python = ">=3.13"
authors = [
    { name = "Ali Archacov", email = "ali.archacov001@gmail.com" }
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "B", "I", "UP", "W", "C90"]
ignore = ["E203"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --cov=logreport --cov-report=term-missing"
testpaths = [
    "tests",
]
